docs/errors/examples/array-index-out-of-range-in-function/array-index-out-of-range-in-function.expected.txt
error[E5101]: array index out of range
  --> array-index-out-of-range-in-function.grob:4:12
   |
 4 |     return items[items.length]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: 'items' has length: 2
   = note: index requested: 2
   = note: valid indices: 0 to 1
   |
   at lastItem (array-index-out-of-range-in-function.grob:8:7)
   at <top-level> (array-index-out-of-range-in-function.grob:8:7)
